bin_PROGRAMS = sock

sock_SOURCES = \
	addrinfo.h global.h ourhdr.h sock.h \
	buffers.c cliopen.c crlf.c error.c looptcp.c \
	loopudp.c main.c multicast.c pattern.c servopen.c \
	sleepus.c sockopts.c sourceroute.c sourcetcp.c \
	sourceudp.c sinktcp.c sinkudp.c tellwait.c write.c writen.c \
	loopsctp.c sinksctp.c sourcesctp.c ipv6_opt_hdrs.c

AM_CFLAGS = -Wall -Wstrict-prototypes -g -O2
